# SpotifyBlogGenerator

./: .replit  CODE_SNIPPETS_SETUP.md  DEPLOYMENT_GUIDE.md  ELEMENTOR_SETUP_GUIDE.md  STREAMLIT_CLOUD_DEPLOYMENT.md  WHERE_UPDATES_GO.md  WORDPRESS_DEBUG_GUIDE.md  check_wordpress_setup.py  debug_elementor_update.py  diagnose_wordpress.py  elementorfix.md  final_fixed_app.py  fixed_app.py  fixed_wordpress_app.py  main.py  main.py.backup  main.py.backup2  main.py.bak  main.py.bak2  main.py.complex  processed_playlists_updated_20250408_054243.csv  processed_playlists_updated_20250408_055228.csv  processed_playlists_updated_20250425_190551.csv  processed_playlists_updated_20250425_194937.csv  processed_playlists_youtube_20250311_064320.csv  processed_playlists_youtube_20250407_234132.csv  processed_playlists_youtube_20250425_194937.csv  pyproject.toml  simple_app.py  simple_test.py  simplified_app.py  suggestedfix.md  tab5_fixed.py  test_streamlit.py  test_wordpress_updates.py
.claude/: settings.local.json
.streamlit/: config.toml
attached_assets/: Cocktail-Hours.csv  Pasted--Fix-WordPress-API-Authentication-in-SpotifyBlogGenerator-Application-I-need-help-fixing-the-Wor-1744087405529.txt  Pasted--The-Summer-Pop-Wedding-Cocktail-Hour-The-Summer-Pop-Wedding-Cocktail-Hour-Your-Perfec-1741673246555.txt  Pasted--Wedding-Playlist-Blog-Generator-Simplified-Single-Sheet-Approach-This-script-work-1741670740152.txt  Pasted-I-need-help-fixing-WordPress-API-integration-issues-in-my-Spotify-Blog-Generator-app-The-app-succes-1744077336223.txt  wordpress.txt  (+1 more)
utils/: csv_handler.py  (+14 more)
(+40 files in other folders)
