[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.163.0",
    "numpy>=2.2.3",
    "openai>=1.65.5",
    "pandas>=2.2.3",
    "spotipy>=2.25.1",
    "streamlit>=1.43.1",
    "trafilatura>=2.0.0",
]
